i change the background

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -1,5 +1,5 @@
 body {
-  background: url(../img/bg.jpg) no-repeat center center fixed; 
+  background: url(http://t0.gstatic.com/images?q=tbn:ANd9GcSxDqP10-m1RTTHhPpu-9NaCJ-COTKZW7O529lV1l1FZABi72A:www.freefever.com/stock/blue-mac-apple-flower-background.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
