--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -1,5 +1,5 @@
 body {
-  background: url(http://t0.gstatic.com/images?q=tbn:ANd9GcSxDqP10-m1RTTHhPpu-9NaCJ-COTKZW7O529lV1l1FZABi72A) no-repeat center center fixed; 
+  background: url(http://www.afranko.com/wp-content/uploads/2013/11/f248e2501770fca36c7a2fa29f6e8176.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
