uploaded the galaxy.jpg file for use with bg

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -1,5 +1,5 @@
 body {
-  background: url(http://www.afranko.com/wp-content/uploads/2013/11/f248e2501770fca36c7a2fa29f6e8176.jpg) no-repeat center center fixed; 
+  background: url(http://jasminewong.github.io/img/galaxy.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
