added img and added full url

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -1,5 +1,5 @@
 body {
-  background: url(http://jasminewong.github.io/img/galaxy.jpg) no-repeat center center fixed; 
+  background: url(http://jasminewong.github.io/img/Pink-Stars.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
